[gd_scene load_steps=62 format=2]

[ext_resource path="res://19.png" type="Texture" id=1]
[ext_resource path="res://sprite-sheet-249x100.png" type="Texture" id=2]
[ext_resource path="res://sprite-sheet-2-147x94.png" type="Texture" id=3]
[ext_resource path="res://green.png" type="Texture" id=4]
[ext_resource path="res://background.png" type="Texture" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 249, 100 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 249, 0, 249, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 498, 0, 249, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 747, 0, 249, 100 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 996, 0, 249, 100 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1245, 0, 249, 100 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 100, 249, 100 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 249, 100, 249, 100 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 996, 300, 249, 100 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1245, 300, 249, 100 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 249, 100 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 249, 400, 249, 100 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 498, 400, 249, 100 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 747, 400, 249, 100 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 996, 400, 249, 100 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1245, 400, 249, 100 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 500, 249, 100 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 249, 500, 249, 100 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 498, 500, 249, 100 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 747, 500, 249, 100 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 996, 500, 249, 100 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1245, 500, 249, 100 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 600, 249, 100 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 249, 600, 249, 100 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 498, 600, 249, 100 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 100, 249, 100 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 249, 100, 249, 100 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 498, 100, 249, 100 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 747, 100, 249, 100 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 996, 100, 249, 100 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1245, 100, 249, 100 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 200, 249, 100 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 249, 200, 249, 100 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 498, 200, 249, 100 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 747, 200, 249, 100 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 996, 200, 249, 100 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1245, 200, 249, 100 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "special",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": false,
"name": "attack",
"speed": 7.0
} ]

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 147, 94 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 147, 0, 147, 94 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 294, 0, 147, 94 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 441, 0, 147, 94 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 588, 0, 147, 94 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 94, 147, 94 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 147, 94, 147, 94 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 294, 94, 147, 94 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 441, 94, 147, 94 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 588, 94, 147, 94 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 188, 147, 94 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 147, 0, 147, 94 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 294, 0, 147, 94 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 147, 282, 147, 94 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 441, 282, 147, 94 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 294, 282, 147, 94 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "damaged",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.632, 300.756 )
scale = Vector2( 1.60024, 1.25702 )
texture = ExtResource( 1 )

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 541.153, 332.434 )
frames = SubResource( 38 )
animation = "special"
frame = 16
speed_scale = 3.0
playing = true

[node name="Snake" type="AnimatedSprite" parent="."]
position = Vector2( 442.297, 330.852 )
frames = SubResource( 55 )
animation = "damaged"
speed_scale = 2.0

[node name="SnakeHealthbar" type="TextureProgress" parent="."]
margin_left = 375.346
margin_top = 291.898
margin_right = 485.346
margin_bottom = 331.898
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthbar" type="TextureProgress" parent="."]
margin_left = 519.061
margin_top = 277.423
margin_right = 629.061
margin_bottom = 317.423
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="Button" parent="."]
margin_left = 695.584
margin_top = 274.113
margin_right = 778.584
margin_bottom = 318.113
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpecialButton" type="Button" parent="."]
margin_left = 673.433
margin_top = 329.881
margin_right = 798.433
margin_bottom = 376.881
text = "Special Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="Player" to="." method="_on_Player_animation_finished"]
[connection signal="animation_finished" from="Snake" to="." method="_on_Snake_animation_finished"]
[connection signal="pressed" from="AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="pressed" from="SpecialButton" to="." method="_on_SpecialButton_pressed"]
